# table_reconstruction

./: .gitignore  .sun-ci.yml  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  table_reconstruction.html  table_reconstruction.line_segmentation.html  table_reconstruction.line_segmentation.unet.html  table_reconstruction.output.html  table_reconstruction.table_detection.html  table_reconstruction.table_detection.yolov5.html  table_reconstruction.table_detection.yolov5.models.html  table_reconstruction.utils.html  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
_modules/: index.html  table_reconstruction.html
_sources/: modules.rst.txt  table_reconstruction.line_segmentation.rst.txt  table_reconstruction.line_segmentation.unet.rst.txt  table_reconstruction.output.rst.txt  table_reconstruction.rst.txt  table_reconstruction.table_detection.rst.txt  table_reconstruction.table_detection.yolov5.models.rst.txt  table_reconstruction.table_detection.yolov5.rst.txt  table_reconstruction.utils.rst.txt
docs/source/: conf.py  index.rst
example/: example.ipynb
table_reconstruction/: __init__.py
table_reconstruction/line_segmentation/: dataset.py  line_segment.py  utils.py
table_reconstruction/output/: cell.py  element.py  table.py
table_reconstruction/table_detection/: detector.py  (+3 more)
tests/: test_line_segment.py  test_package.py  test_table_detection.py  test_utils.py
(+37 files in other folders)
